--- a/scss/main.css
+++ b/scss/main.css
@@ -379,4 +379,35 @@ p {
 }
 .conford-site {
   background: #D8F1F0;
+  padding-top: 57px;
+  padding-bottom: 92px;
+}
+
+.conford__left--title {
+  font-family: "IBM Plex Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 48px;
+  color: rgba(6, 18, 36, 0.9);
+  padding-bottom: 18px;
+}
+.conford__left--text {
+  max-width: 512px;
+  font-family: "IBM Plex Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  color: rgba(6, 18, 36, 0.9);
+  padding-bottom: 18px;
+}
+.conford__left .btn {
+  padding: 22px 50px;
+  font-family: "IBM Plex Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  color: rgba(6, 18, 36, 0.9);
 }/*# sourceMappingURL=main.css.map */
