--- a/scss/allblock-file/_section.scss
+++ b/scss/allblock-file/_section.scss
@@ -62,6 +62,7 @@
 }
 
 .conford {
+    @include flexfunksiya (row, center, space-between, nowrap);
     &__left {
         &--title {
             font-family: $fonts;
@@ -84,12 +85,21 @@
         }
         .btn {
             padding: 22px 50px;
-            font-family: 'IBM Plex Sans';
+            font-family: $fonts;
             font-style: normal;
             font-weight: 700;
             font-size: 14px;
             line-height: 24px;
-            color: rgba(6, 18, 36, 0.9);
+            color: $nav-color;
+            border: 1.5px solid #1064E5;
+            border-radius: 46px;
+            &:hover {
+                background-color: $btn-color;
+                border: 1.5px solid transparent;
+                transition: all 2s ease;
+                color: $white-color;
+                transform: rotate(360deg);
+            }
         }
     }
 }
