--- a/scss/main.css
+++ b/scss/main.css
@@ -442,6 +442,9 @@ p {
     justify-content: space-between;
     flex-wrap: nowrap;
   }
+  .conford__left {
+    padding-left: 50px;
+  }
   .conford__left .btn {
     padding: 11px 50px;
   }
@@ -453,10 +456,12 @@ p {
   }
   .conford__right--img1 {
     display: block;
+    padding-right: -50px;
   }
 }
 @media screen and (max-width: 576px) {
   .conford {
+    padding-bottom: 53px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -467,6 +472,7 @@ p {
     padding-bottom: 32px;
   }
   .conford__left--title {
+    padding-top: 18px;
     font-size: 20px;
     line-height: 22px;
   }
