signature__list start

--- a/scss/allblock-file/_section.scss
+++ b/scss/allblock-file/_section.scss
@@ -181,3 +181,13 @@
         }
     }
 }
+
+.signature {
+    &__title {}
+    &__list {
+        &--item {
+            background: #DEEEFC;
+            border-radius: 4px;
+        }
+    }
+}
