--- a/scss/main.css
+++ b/scss/main.css
@@ -505,6 +505,14 @@ p {
   }
 }
 .signature__list--item {
+  padding: 32px;
+  max-width: 256px;
   background: #DEEEFC;
   border-radius: 4px;
+}
+.signature__list .list-text {
+  padding-bottom: 44px;
+}
+.signature__list .list-text1 {
+  padding-bottom: 18px;
 }/*# sourceMappingURL=main.css.map */
