--- a/scss/allblock-file/_section.scss
+++ b/scss/allblock-file/_section.scss
@@ -183,19 +183,104 @@
 }
 
 .signature {
-    &__title {}
+    padding-bottom: 98px;
+    &__title {
+        font-family: $fonts;
+        padding: 60px 0;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 40px;
+        line-height: 48px;
+        text-align: center;
+        color: $nav-color;
+    }
     &__list {
+        @include flexfunksiya (row, center, space-around, wrap);
+        gap: 20px;
         &--item {
             padding: 32px;
-            max-width: 256px;
+            width: 256px;
+            height: 352px;
             background: #DEEEFC;
             border-radius: 4px;
         }
         .list-text {
             padding-bottom: 44px;
+            font-family: $fonts;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 28px;
+            line-height: 40px;
+            color: $nav-color;
         }
         .list-text1 {
+            font-family: $fonts;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 24px;
+            color: $nav-color;
             padding-bottom: 18px;
+        }
+        .list-text3 {
+            font-family: $fonts;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 48px;
+            line-height: 48px;
+            color: $nav-color;
+            padding-bottom: 50px;
+        }
+        .text3-leni {
+            font-size: 20px;
+            line-height: 24px;
+        }
+        .list-text121 {
+            font-family: 'IBM Plex Sans';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 24px;
+            max-width: 180px;
+            padding-bottom: 84px;
+            color: rgba(6, 18, 36, 0.9);
+        }
+        .pll {
+            padding-left: 32px;
+            padding-right: 60px;
+        }
+        .pll1 {
+            padding: 23px;
+        }
+        .btn {
+            background: $btn-color;
+            border-radius: 100px;
+            padding: 9px 20px;
+            border: none;
+            font-family: $fonts;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 20px;
+            color: #EBF5F6;
+            border: 1px solid transparent;
+            transition: all 2s ease;
+            &:hover {
+                background: $white-color;
+                color: $btn-color;
+                border: 1px solid $btn-color;
+                transition: all 2s ease;
+                transform: rotate(360deg);
+            }
+        }
+    }
+}
+
+@media screen and (max-width:768px) {
+    .siganture {
+        &__list {
+            @include flexfunksiya (row, center, space-around, wrap);
+            .pp {}
         }
     }
 }
