--- a/scss/allblock-file/_section.scss
+++ b/scss/allblock-file/_section.scss
@@ -284,3 +284,41 @@
         }
     }
 }
+
+.segnet-site {
+    background: #D8F1F0;
+    padding: 43px 0;
+}
+
+.segned {
+    &__title {
+        font-family: $fonts;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 73px;
+        line-height: 48px;
+        text-align: center;
+        color: $nav-color;
+    }
+    &__text {
+        text-align: center;
+        padding: 12px 0;
+        font-family: $fonts;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 40px;
+        line-height: 48px;
+        color: $nav-color;
+    }
+    &__text1 {
+        max-width: 478px;
+        margin: 0 auto;
+        font-family: $fonts;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 28px;
+        text-align: center;
+        color: $nav-color;
+    }
+}
