--- a/scss/main.css
+++ b/scss/main.css
@@ -690,4 +690,33 @@ p {
   background: #D8F1F0;
   padding-top: 38px;
   padding-bottom: 44px;
+}
+
+.writing__title {
+  font-family: "IBM Plex Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 48px;
+  text-align: center;
+  color: rgba(6, 18, 36, 0.9);
+}
+.writing__list .date {
+  padding-top: 14px;
+  padding-bottom: 6px;
+  font-family: "IBM Plex Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 24px;
+  color: rgba(6, 18, 36, 0.9);
+}
+.writing__list .writing-text {
+  max-width: 256px;
+  font-family: "IBM Plex Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 26px;
+  color: rgba(6, 18, 36, 0.9);
 }/*# sourceMappingURL=main.css.map */
