--- a/scss/main.css
+++ b/scss/main.css
@@ -700,6 +700,14 @@ p {
   line-height: 48px;
   text-align: center;
   color: rgba(6, 18, 36, 0.9);
+  padding-bottom: 32px;
+}
+.writing__list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 .writing__list .date {
   padding-top: 14px;
@@ -719,4 +727,27 @@ p {
   font-size: 24px;
   line-height: 26px;
   color: rgba(6, 18, 36, 0.9);
+}
+
+@media screen and (max-width: 768px) {
+  .writing__title {
+    font-family: "IBM Plex Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 48px;
+    text-align: center;
+    color: rgba(6, 18, 36, 0.9);
+    padding-bottom: 32px;
+  }
+  .writing__list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+  .writing__list--item {
+    padding-bottom: 40px;
+  }
 }/*# sourceMappingURL=main.css.map */
