--- a/scss/allblock-file/_section.scss
+++ b/scss/allblock-file/_section.scss
@@ -417,3 +417,25 @@
         }
     }
 }
+
+.live {
+    &__title {
+        padding-top: 49px;
+        padding-bottom: 20px;
+        font-family: $fonts;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 40px;
+        line-height: 48px;
+        text-align: center;
+        color: $nav-color;
+    }
+    iframe {
+        padding-bottom: 63px;
+        display: block;
+        max-width: 734px;
+        width: 100%;
+        height: 451px;
+        margin: 0 auto;
+    }
+}
