--- a/scss/main.css
+++ b/scss/main.css
@@ -750,4 +750,23 @@ p {
   .writing__list--item {
     padding-bottom: 40px;
   }
+}
+.live__title {
+  padding-top: 49px;
+  padding-bottom: 20px;
+  font-family: "IBM Plex Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 48px;
+  text-align: center;
+  color: rgba(6, 18, 36, 0.9);
+}
+.live iframe {
+  padding-bottom: 63px;
+  display: block;
+  max-width: 734px;
+  width: 100%;
+  height: 451px;
+  margin: 0 auto;
 }/*# sourceMappingURL=main.css.map */
