--- a/scss/main.css
+++ b/scss/main.css
@@ -769,4 +769,95 @@ p {
   width: 100%;
   height: 451px;
   margin: 0 auto;
+}
+
+.popular-site {
+  background: #D8F1F0;
+  padding-top: 26px;
+  padding-bottom: 42px;
+}
+
+.popular__title {
+  font-family: "IBM Plex Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 48px;
+  text-align: center;
+  color: rgba(6, 18, 36, 0.9);
+  padding-bottom: 36px;
+}
+.popular__text {
+  max-width: 523px;
+  margin: 0 auto;
+  font-family: "IBM Plex Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: rgba(6, 18, 36, 0.9);
+}
+.popular__text .popular__leni {
+  color: #000;
+}
+
+.news {
+  padding-top: 56px;
+  padding-bottom: 98px;
+}
+.news__title {
+  font-family: "IBM Plex Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 48px;
+  text-align: center;
+  color: rgba(6, 18, 36, 0.9);
+}
+.news__text {
+  font-family: "IBM Plex Sans";
+  padding: 30px 0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 33px;
+  text-align: center;
+  color: rgba(6, 18, 36, 0.9);
+}
+.news .form {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  gap: 18px;
+}
+.news .input {
+  padding: 0 10px;
+  border: 1px solid #1064E5;
+  border-radius: 37px;
+  display: block;
+  max-width: 399px;
+  width: 100%;
+  height: 50px;
+}
+.news .btn {
+  padding: 17px 30px;
+  background: #1064E5;
+  border-radius: 41px;
+  border: none;
+  border: 1px solid transparent;
+  font-family: "IBM Plex Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 24px;
+  color: #FFFFFF;
+}
+.news .btn:hover {
+  background: #FFFFFF;
+  border: 1px solid #1064E5;
+  transform: rotate(360deg);
+  transition: all 2s ease;
+  color: #1064E5;
 }/*# sourceMappingURL=main.css.map */
